<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tf2_py</name>
  <version>0.12.3</version>
  <description>The tf2_py package</description>

  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/tf2_py</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>

  <depend>tf2</depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
