<package format="2">
  <name>tf2_ros</name>
  <version>0.13.4</version>
  <description>
    This package contains the C++ ROS bindings for the tf2 library
  </description>
  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
