<package format="2">
  <name>tf2_ros_py</name>
  <version>0.13.4</version>
  <description>
    This package contains the ROS Python bindings for the tf2 library
  </description>
  <author>Eitan Marder-Eppstein</author>
  <author>Wim Meeussen</author>
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/tf2_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
